# Symmetrization

./: .gitignore  CMakeLists.txt  README.md
code/: CMakeLists.txt
code/Symmetry/: CMakeLists.txt  Symmetry_viewer.cpp  Symmetry_viewer.h  main.cpp
code/cmake/: FindGUROBI.cmake
code/easy3d/: CMakeLists.txt
code/easy3d/algo/: CMakeLists.txt
code/easy3d/renderer/: shapes.cpp
code/method/: CMakeLists.txt  Noise.cpp  Noise.h  Optimisation.cpp  Optimisation.h  bounding_sphere.h
